[package]
name = "sharding_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = {version = "4.5.31",features = ["derive"]}
starknet = "0.13.0"
starknet-crypto = "0.7.4"
starknet-types-core = { version = "0.1.7", default-features = false }
tokio = { version = "1.0.2", features = ["full"] }