[workspace]
resolver = "2"
members = [
    "shard/core",
    "bin/shard",
]
[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = {version = "4.5.31",features = ["derive","env"]}
starknet = "0.13.0"
starknet-crypto = "0.7.4"
tokio = { version = "1.0.2", features = ["full"] }
shard-core = { path = "shard/core" }
url = { version = "2.5.4", default-features = false }
